# dietconv

./: .gitignore  LICENSE  README.md  pyproject.toml
cpp/: dietconv_benchmark.cpp  torch_dietconv_extension.cpp
dietconv/: __init__.py  algorithms.py  benchmarking.py  torch_ops.py
paper/: Makefile  build.sh  latexmkrc  main.tex  outline.md  references.bib
paper/configs/: paper_benchmarks.json  v2_ablations.json
paper/tables/: cpp_runtime_summary.tex  torch_memory_summary.tex  torch_runtime_summary.tex
results/: benchmark_results.csv  benchmark_summary.json  cnn_showcase.json  cpp_benchmark_summary.json  cpp_size_scaling.csv  cpp_thread_scaling.csv  paper_v2_ablation_cpp.csv  paper_v2_ablation_torch.csv  torch_benchmark_summary.json  torch_memory_size_scaling.csv  torch_memory_summary.json  torch_memory_thread_scaling.csv  torch_size_scaling.csv  torch_thread_scaling.csv
scripts/: generate_paper_assets.py  plot_benchmarks.py  plot_cpp_benchmarks.py  plot_torch_benchmarks.py  plot_torch_memory_benchmarks.py  run_benchmarks.py  run_cpp_benchmarks.py  run_paper_benchmarks.py  run_torch_benchmarks.py  run_torch_memory_benchmarks.py  run_v2_ablations.py  showcase_cnn.py  torch_memory_probe_worker.py  update_readme_benchmarks.py
tests/: test_algorithms.py  test_torch_ops.py  test_update_readme_benchmarks.py
