[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dietconv-showcase"
version = "0.1.0"
description = "Benchmarking and showcase repository for the DietConv convolution algorithm."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.23",
]

[tool.setuptools.packages.find]
include = ["dietconv*"]
